# c-emit

./: .gitignore  Cargo.toml  README.md
benches/: bench_simple.rs
examples/: .gitignore  hello_world.c  hello_world.rs
src/: lib.rs
